Fix little layout issues

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .home{
-  min-height: 500px;
+  min-height: 480px;
   height: 100vh;
-  max-height: 600px;
+  max-height: 740px;
   background-color: #635FD3;
   margin: auto;
   z-index: 0;
