--- a/src/app/picker/picker.component.css
+++ b/src/app/picker/picker.component.css
@@ -1,5 +1,5 @@
 .picker{
-  min-height: 500px;
+  min-height: 480px;
   height: 100vh;
   max-height: 600px;
   z-index: 10;
