--- a/src/app/timer/timer.component.css
+++ b/src/app/timer/timer.component.css
@@ -77,5 +77,13 @@
 }
 
 .spacer{
+  width: 100vw;
+}
+
+#time span:nth-child(3){
+  text-align: center;
+  font-size: 17px;
+  margin: auto;
   width: 100%;
+  color: rgba(255,255,255,0.8);
 }
